--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,9 +10,6 @@
     font-style: normal;
 }
 
-.main{
-    background: #f2f2f2;
-}
 .color1{
     background: #34495e;
     color: #fff;
@@ -28,4 +25,12 @@ footer{
 h2{
     text-align: right;
     font-family: "mifuente";
+}
+h1{
+    color: rgb(52, 89, 211);
+    font-family: 'Questrial' sans-serif;
+    text-shadow: 5px 5px 5px rgb(70, 70, 70);
+    text-align: center;
+}h3{
+    text-align: center;
 }
